--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:E-Key-Manager": "node dist/e-key-manager/server/server.mjs"
+    "serve:ssr:e-key-manager": "node dist/e-key-manager/server/server.mjs"
   },
   "private": true,
   "dependencies": {
