--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^17.2.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
