--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
